<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AddFragment">

    <ImageView
        android:id="@+id/pic_tail_add_iv"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:padding="120dp"
        android:paddingBottom="30dp"
        android:src="@drawable/empty_pic_tail" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/name_of_cocktail" />

    <EditText
        android:id="@+id/name_et"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:paddingBottom="5dp"
        android:paddingStart="15dp"
        android:textSize="15sp"
        android:paddingEnd="15dp"/>

    <TextView
        android:id="@+id/name_nec_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="12sp"
        android:textColor="@color/red"
        android:visibility="gone"
        android:text="@string/add_name_tv" />

    <TextView
        android:id="@+id/desc_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="15sp"
        android:text="@string/description" />

    <EditText
        android:id="@+id/desc_et"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:paddingBottom="5dp"
        android:textSize="15sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>

    <TextView
        android:id="@+id/desc_nec_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="12sp"
        android:textColor="@color/red"
        android:visibility="gone"
        android:text="@string/add_desc_tv" />

    <TextView
        android:id="@+id/ingri_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="15sp"
        android:text="@string/ingri_tv" />

    <TextView
        android:id="@+id/ingri_list_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="15sp"
        android:text="@string/none_tv" />

    <Button
        android:id="@+id/add_ing_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/light_blue"
        android:text="@string/add_ing_btn" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:backgroundTint="@color/light_blue"
        android:text="@string/save" />


</LinearLayout>