<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/greating_iv"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/greating_pic" />

    <TextView
        android:id="@+id/my_tail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginBottom="45dp"
        android:text="@string/my_cocktails_tv" />

    <TextView
        android:id="@+id/add_fir_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/gray"
        android:layout_marginBottom="-10dp"
        android:text="@string/add_first_tv" />

    <TextView
        android:id="@+id/arrow_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="@color/gray"
        android:layout_marginBottom="10dp"
        android:text="@string/arrow_tv" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        app:cornerRadius="45dp"
        android:id="@+id/add_btn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:textSize="25sp"
        app:backgroundTint="@color/light_blue"
        android:text="@string/add_btn" />

</LinearLayout>